--- a/templates/manifest.html
+++ b/templates/manifest.html
@@ -8,12 +8,19 @@
     <hr>
     UFC - Unity for Change - ufc.org.il - Цели и задачи организации<br>
     <ul>
+        <il>Правовая и юридическая помощь во время войны</il><br>
         <il>Помощь русскоговорящим новым репатриантам и гражданам Израиля в области прав и обязанностей гражданина государства Израиль</il><br>
         <il>Проведение курсов и семинаров для помощи в трудоустройстве</il><br>
         <il>Проведение курсов и семинаров по финансовой грамотности</il><br>
         <il>Проведение курсов и семинаров по правовой и юридической грамотности</il><br>
         <il>Бесплатная юридическая помощь нуждающимся</il><br>
         <il>Организации клубов и встреч направленных на интеграцию на новой родине</il><br>
+        <il>Открытие и поддержка 24\7 горячей линии. Позвонив на неё, каждый всегда получает необходимую помощь безвозмездно. 
+        Мы принимаем все обращения и разбираемся с каждым случаем индивидуально.</il><br>
+        <il>Права работников и отношения между работодателями и работниками</il><br>
+        <il></il><br>
+        <il></il><br>
+        <il></il><br>
     </ul>
     
 </article>
